--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="box">
                <h3>Computer Sciene</h3>
-               <p>September 2020 - Present, Olot</p>
+               <p>September 2020 - Present, Girona</p>
             </div>
          </div>
          <h2>Skills</h2>
