--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                <p>September 2018 - June 2020, Olot</p>
             </div>
             <div class="box">
-               <h3>Computer Sciene</h3>
+               <h3>Degree in Computer Science:</h3>
                <p>September 2020 - Present, Girona</p>
             </div>
          </div>
